# e2b-hackathon

./: .gitignore  e2b.Dockerfile  e2b.toml  pyproject.toml
fitness_output/: training_plan.ics  training_recommendation.txt
src/analyze_data/: process_apple_data.py  process_strava_data.py
src/e2b_code/: main.py  processing_script.py
src/export_data/: aa.py  download_detailed_strava_activities.py  from_apple.py  from_strava.py
