[project]
name = "e2b-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Boris Kiška",email = "boriskiska@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.25.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
